# NomadLoader

./: .gitignore  Cargo.toml  README.md
NomadLoader/src/: main.rs
NomadLoader/src/cmdline/: mod.rs
NomadLoader/src/dumper/: mod.rs
NomadLoader/src/executor/: mod.rs
NomadLoader/src/generator/: mod.rs
NomadLoader/src/iat/: jit.rs
NomadLoader/src/pe/: mod.rs
NomadLoader/tests/: dumper_test.rs  generator_test.rs
pe_tests/: Cargo.toml  README.md  docker-test.sh
pe_tests/src/: lib.rs  main.rs
pe_tests/tests/: file_test.rs
src/: lib.rs
src/dumper/: dll.rs  exe.rs
src/generator/: assembly.rs
src/iat/: mod.rs
src/pe/: header.rs  import.rs  section.rs
src/stages/: mod.rs
tests/: pe_parser_test.rs
