[package]
name = "NomadLoader"
version = "0.1.0"
edition = "2021"
authors = ["JayGLXR"]
description = "Advanced utility for converting PE files to position-independent code"
readme = "README.md"
license = "MIT"

[dependencies]
# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Windows API bindings
windows = { version = "0.48", features = [
    "Win32_Foundation", 
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO"
]}

# PE parsing
goblin = "0.6"

# Assembly encoding/decoding
keystone-engine = "0.1"
iced-x86 = "1.20"

# Encryption
aes = "0.8"
chacha20poly1305 = "0.10"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"

# Utilities
byteorder = "1.4"
memmap2 = "0.5"
scopeguard = "1.2"

[dev-dependencies]
tempfile = "3.6"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "NomadLoader"
path = "src/main.rs"